# edge-router

./: Cargo.toml
kante/: Cargo.toml
kante-core/: Cargo.toml
kante-core/src/: body.rs  error.rs  lib.rs  macros.rs  map_future.rs  service.rs
kante-core/src/error_handling/: mod.rs
kante-core/src/extract/: rejection.rs
kante-core/src/response/: append_headers.rs  into_response.rs  into_response_parts.rs  mod.rs  redirect.rs
kante-extractors/: Cargo.toml
kante-router/: Cargo.toml
kante-router/src/: into_make_service.rs  lib.rs  macros.rs  method_routing.rs  not_found.rs  route.rs  router.rs  strip_prefix.rs  util.rs
kante-router/src/handler/: future.rs  into_service.rs  mod.rs
kante/src/: error.rs  lib.rs  response.rs  service.rs
src/: body.rs  lib.rs  router.rs
