[package]
name = "kante-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
bytes = "1.1.0"
futures-util = "0.3.21"
http = { version = "0.2.8", default-features = false }
http-body = "0.4.5"
matchit = "0.5.0"
mime = "0.3.16"
pin-project-lite = "0.2.9"
tower = { version = "0.4.12", default-features = false }
tower-layer = { version = "0.3.1", default-features = false }
tower-service = "0.3.1"
tower-util = "0.3.1"
