[package]
name = "kante-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
futures-util = "0.3.21"
http = "0.2.8"
http-body = "0.4.5"
matchit = "0.5.0"
tower-service = "0.3.1"
kante-core = { path = "../kante-core" }
bitflags = "1.3.2"
tower = { version = "0.4.12", default-features = false, features = ["util"] }
pin-project-lite = "0.2.9"
percent-encoding = "2.1.0"
itoa = "1.0.2"
tower-http = { version = "0.3.4", default-features = false, features = ["map-response-body"] }
tower-layer = "0.3.1"
